--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-overseas": "cross-env NO_PROXY=true node index.js"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.12.2",
     "ccxt": "^4.2.0",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
@@ -16,5 +16,10 @@
     "express": "^4.18.2",
     "https-proxy-agent": "^7.0.6",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.18.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
